--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -15,6 +15,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "autoprefixer": "^10.4.21",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
     "postcss": "^8.5.6",
@@ -22,6 +23,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-router-dom": "^7.8.2",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
