--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "test:run": "vitest run"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@headlessui/react": "^2.2.7",
+    "@heroicons/react": "^2.2.0",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
